updated templates and tf-files folders

--- a/Project-106-Terraform-Phonebook-Application-deployed-on-AWS/templates/index.html
+++ b/Project-106-Terraform-Phonebook-Application-deployed-on-AWS/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Clarusway Project - 106</title>
+  <title>Phonebook Application</title>
   <style>
     body {
       max-width: 600px;
@@ -65,7 +65,7 @@
   <div><img src="https://clarusway.com/wp-content/uploads/2020/06/clarusway_logo.png" /></div>
 
   <h1>Project : Phonebook Application</h1>
-  <h2>Welcome to {{developer_name}}'s Phonebook Application</h2>
+  <h2>Welcome to Rumeysa's Phonebook Application</h2>
   <h2 class="sectionnote">Enter a name to search</h2>
 
   <form action="#" method="post">
@@ -82,7 +82,7 @@
     {% endif %}
   </form>
 
-  <p class="footnote"><i>This app is developed in Python by <b>{{ developer_name }}</b> and deployed with Flask on AWS Cloud using Terraform Service.</i></p>
+  <p class="footnote"><i>This app is developed in Python by <b>Rumeysa</b> and deployed with Flask on AWS Cloud using Terraform Service.</i></p>
 </body>
 
 </html>
